# abb_robot_driver

./: README.md  pkgs.repos
.github/workflows/: ci_bionic.yml  ci_focal.yml
abb_egm_hardware_interface/: CMakeLists.txt  README.md  package.xml
abb_egm_hardware_interface/config/: base_configs_example.yaml  egm_multiple_mech_units_example.yaml  egm_single_mech_unit_example.yaml  egm_yumi_mech_units_example.yaml
abb_egm_hardware_interface/include/abb_egm_hardware_interface/: egm_controller_stopper.h  egm_hardware_interface.h  egm_state_interface.h
abb_egm_hardware_interface/launch/: egm_hardware_interface.launch
abb_egm_hardware_interface/src/: egm_controller_stopper.cpp  egm_controller_stopper_main.cpp  egm_hardware_interface.cpp  egm_hardware_interface_main.cpp
abb_egm_state_controller/: CMakeLists.txt  README.md  egm_state_controller_plugin.xml  package.xml
abb_egm_state_controller/config/: egm_state_controller.yaml
abb_egm_state_controller/include/abb_egm_state_controller/: egm_state_controller.h
abb_egm_state_controller/launch/: egm_state_controller.launch
abb_egm_state_controller/src/: egm_state_controller.cpp
abb_robot_bringup_examples/: CMakeLists.txt  LICENSE  README.md  package.xml
abb_robot_bringup_examples/config/: ex2_controllers.yaml  ex2_hardware_egm.yaml  ex3_controllers.yaml  ex3_hardware_base.yaml  ex3_hardware_egm.yaml  rosconsole.conf
abb_robot_bringup_examples/launch/: ex1_rws_only.launch  ex2_rws_and_egm_6axis_robot.launch  ex3_rws_and_egm_yumi_robot.launch
abb_robot_cpp_utilities/: CMakeLists.txt  README.md  package.xml
abb_robot_cpp_utilities/include/abb_robot_cpp_utilities/: initialization.h  mapping.h  parameters.h  verification.h
abb_robot_cpp_utilities/src/: initialization.cpp  mapping.cpp  parameters.cpp  verification.cpp
abb_rws_service_provider/: CMakeLists.txt  README.md  package.xml
abb_rws_service_provider/include/abb_rws_service_provider/: rws_service_provider.h
abb_rws_service_provider/launch/: rws_service_provider.launch
abb_rws_service_provider/src/: main.cpp  rws_service_provider.cpp  rws_service_provider_core_srvs.cpp  rws_service_provider_sm_srvs.cpp
abb_rws_state_publisher/: CMakeLists.txt  README.md  package.xml
abb_rws_state_publisher/include/abb_rws_state_publisher/: rws_state_publisher.h
abb_rws_state_publisher/launch/: rws_state_publisher.launch
abb_rws_state_publisher/src/: main.cpp  rws_state_publisher.cpp
