<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_egm_state_controller</name>
  <version>0.5.0</version>
  <description>
    Provides an implementation for a ros_control-based controller interface, which publishes the current state of
    Externally Guided Motion (EGM) communication channels that has been set up between an ABB robot controller
    and external EGM servers.
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>abb_egm_hardware_interface</depend>
  <depend>abb_egm_msgs</depend>
  <depend>abb_robot_cpp_utilities</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>controller_manager</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/egm_state_controller_plugin.xml"/>
  </export>
</package>
