<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_robot_cpp_utilities</name>
  <version>0.5.0</version>
  <description>
    Provides a C++ library with utility functions for the ABB robot controller driver's ROS packages.

    Utility functions can for example be:
    - Mapping between ROS messages, and robot controller messages.
    - Retrieval of mandatory and optional ROS parameters.
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>abb_egm_msgs</depend>
  <depend>abb_egm_rws_managers</depend>
  <depend>abb_rapid_msgs</depend>
  <depend>abb_rapid_sm_addin_msgs</depend>
  <depend>abb_robot_msgs</depend>
  <depend>roscpp</depend>
</package>
