<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_rws_service_provider</name>
  <version>0.5.0</version>
  <description>
    Provides a ROS node implementation that exposes a set of ROS services, for sending requests to an
    ABB robot controller via Robot Web Services (RWS) communication.

    RWS requests can for example be:
    - Resetting the RAPID program pointer.
    - Starting/stopping the RAPID program.
    - Reading/writing IO-signals or RAPID variables.
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>abb_egm_rws_managers</depend>
  <depend>abb_rapid_sm_addin_msgs</depend>
  <depend>abb_robot_cpp_utilities</depend>
  <depend>abb_robot_msgs</depend>
  <depend>roscpp</depend>
</package>
